<resources>
    <string name="app_name">SevillaTraffic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SevillaTraffic</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Opciones</string>

    <string name="app_info_title">Información</string>
    <string name="app_info">Información sobre la aplicación</string>

    <string name="opt_detectors">Notificaciones de detectores</string>
    <string name="opt_detectors_sumOn">Se mostrarán notificaciones basadas en detectores</string>
    <string name="opt_detectors_sumOff">Solo se mostrarán notificaciones verificadas por operadores</string>

    <string name="txt_opt_fluid">Notificaciones fluidez</string>
    <string name="txt_opt_fluid_sumOn">Se mostrarán notificaciones sobre la fluidez de los tramos</string>
    <string name="txt_opt_fluid_sumOff">Solo se mostrarán notificaciones de trafico intenso o moderado</string>

    <string name="txt_opt_voice">Notificaciones con voz</string>
    <string name="txt_opt_voice_sumOn">Las notificaciones se leerán con voz</string>
    <string name="txt_opt_voice_sumOff">Las notificaciones no se leerán con voz</string>

    <string name="txt_opt_voiceCar"></string>
    <string name="txt_opt_voiceCar_sumOn">Siempre se leerán por voz las notificaciones</string>
    <string name="txt_opt_voiceCar_sumOff">Solo se leerán por voz al estar conectadas a un dispositivo</string>

    <string name="app_version">v1.0.0</string>
    <string name="app_info_description">
        La aplicación ha sido desarrollada por Juan Parra en el marco de un Trabajo Fin de Grado de la E.T.S. de Ingeniería Informática,
        dirigido por el profesor Raouf Senhadji y con la colaboración de Francisco León (Centro de Gestión de la Movilidad de Sevilla).
    </string>

    <string name="menu_notifications">Alertas</string>
    <string name="menu_googleRoute">Ruta automática</string>
    <string name="menu_manualRoute">Ruta manual</string>
    <string name="menu_maps">Ruta actual</string>
    <string name="menu_newRoute">Nueva ruta</string>
    <string name="menu_myRoutes">Mis rutas</string>
    <string name="menu_info">Información</string>
    <string name="menu_options">Opciones</string>

    <string name="home_button">Mostrar mapa</string>
    <string name="button_manual">Manualmente</string>
    <string name="button_google">Automáticamente</string>
    <string name="btn_search">Buscar ruta</string>
    <string name="title_activity_maps">Ruta actual</string>

    <string name="start_updates">Empezar registro</string>
    <string name="stop_updates">Parar registro</string>
    <string name="manual_description">La ubicación SOLO se actualizará cuando esta pantalla esté activa</string>

    <string name="txt_not">Elija la hora de inicio y fin de notificaciones:</string>

    <string name="txt_notStart">Inicio:</string>
    <string name="txt_notEnd">Fin:</string>

    <string name="btn_save">Guardar ruta</string>

    <string name="base_url">https://maps.googleapis.com</string>

    <string name="api_key">AIzaSyDMmwbtcC-Wkep4JRFNZtqOgX0YVxDMMzA</string>

    <string name="channel_name">SevillaTraffic</string>
    <string name="channel_description">Esto es SevillaTraffic</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Notificaciones</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="not_options">Notificaciones</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_blank">BlankActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>