<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notifications">

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.sevillatraffic.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_nav_home_to_nav_googleRoute"
            app:destination="@id/nav_googleRoute"
            app:popUpTo="@id/nav_googleRoute"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim">
            <action
                android:id="@+id/button22"
                app:destination="@id/nav_manualRoute" />
        </action>
        <action
            android:id="@+id/action_nav_home_to_nav_manualRoute"
            app:destination="@id/nav_manualRoute" />
        <action
            android:id="@+id/action_nav_home_to_nav_maps"
            app:destination="@id/nav_maps"
            app:popUpTo="@id/nav_notifications" />
        <action
            android:id="@+id/action_nav_home_to_nav_manualRoute2"
            app:destination="@id/nav_manualRoute"
            app:popUpTo="@id/nav_notifications" />
    </fragment>

    <fragment
        android:id="@+id/nav_googleRoute"
        android:name="com.example.sevillatraffic.ui.googleRoute.GoogleRouteFragment"
        android:label="@string/menu_googleRoute"
        tools:layout="@layout/fragment_google_route" />

    <fragment
        android:id="@+id/nav_manualRoute"
        android:name="com.example.sevillatraffic.ui.manualRoute.ManualRouteFragment"
        android:label="@string/menu_manualRoute"
        tools:layout="@layout/fragment_manual_route" />
    <action
        android:id="@+id/button2"
        app:popUpTo="@id/mobile_navigation"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/nav_maps"
        android:name="com.example.sevillatraffic.ui.maps.MapsFragment"
        android:label="@string/menu_maps"
        tools:layout="@layout/maps_fragment" />
</navigation>