<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sevillatraffic.ui.manualRoute.ManualRouteFragment">


    <TextView
        android:id="@+id/text_manualRoute"
        android:layout_width="343dp"
        android:layout_height="119dp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="187dp"
        android:layout_height="43dp"
        android:layout_marginTop="40dp"
        android:text="@string/home_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_manualRoute" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="208dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:text="@string/start_updates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:enabled="false"
        android:text="@string/stop_updates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="367dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="Location updates will be received only when app is foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_stop" />

    <TextView
        android:id="@+id/location_result"
        android:layout_width="297dp"
        android:layout_height="73dp"
        android:textColor="#333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


</androidx.constraintlayout.widget.ConstraintLayout>