<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.options.OptionsFragment">

    <View
        android:id="@+id/divider"
        android:layout_width="411dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/txt_opt_fluid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_opt_fluid" />

    <TextView
        android:id="@+id/txt_opt_detectors"
        android:layout_width="259dp"
        android:layout_height="74dp"
        android:foregroundGravity="center_vertical"
        android:gravity="center_vertical"
        android:text="@string/opt_detectors"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/swt_detector"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533" />

    <Switch
        android:id="@+id/swt_detector"
        android:layout_width="73dp"
        android:layout_height="42dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="411dp"
        android:layout_height="1dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_opt_fluid"
        android:layout_width="259dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:foregroundGravity="center_vertical"
        android:gravity="center_vertical"
        android:text="@string/txt_opt_fluid"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/swt_fluid"
        android:layout_width="73dp"
        android:layout_height="42dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toEndOf="@+id/txt_opt_fluid"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_app_info"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/app_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintVertical_bias="0.184" />

    <TextView
        android:id="@+id/txt_opt_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txt_opt_voice"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintVertical_bias="0.206" />

    <Switch
        android:id="@+id/swt_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.25"
        android:scaleY="1.25"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toEndOf="@+id/txt_opt_voice"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintVertical_bias="0.481" />


</androidx.constraintlayout.widget.ConstraintLayout>